# Chip-8-CPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: chip8.cpp  chip8.h  main.cpp  platform.cpp  platform.h
